# PPLite

./: CREDITS  Makefile.am  README.md  TODO  configure.ac
demos/: Makefile.am
demos/pplite_lcdd/: Makefile.am  expected_mpz  expected_mpz_a  pplite_lcdd.cc
demos/pplite_lcdd/examples/: Makefile.am
m4/: ac_check_flint.m4  ac_check_gmp.m4  ac_check_mpfr.m4  ac_text_md5sum.m4  ac_use_libtool.m4  ax_cxx_compile_stdcxx.m4
src/: Abs_Poly.hh  Abs_Poly_Adapter.cc  Abs_Poly_Adapter.hh  Affine_Expr.cc  Affine_Expr.hh  BBox.hh  BBox_impl.hh  B_Poly.cc  B_Poly.hh  Bits.cc  Bits.hh  Con.cc  Con.hh  Dyn_Poly.hh  FLINT_Integer.cc  FLINT_Integer.hh  FLINT_Rational.cc  FLINT_Rational.hh  F_Poly.cc  F_Poly.hh  GMP_Integer.cc  GMP_Integer.hh  GMP_Rational.cc  GMP_Rational.hh  Gen.cc  Gen.hh  Index_Partition.hh  Integer.hh  Integer_fwd.hh  Itv.hh  Linear_Expr.cc  Linear_Expr.hh  Local_Stats.hh  Low_Level_Stats.cc  Low_Level_Stats.hh  Makefile.am  Output_Function.hh  Poly.cc  Poly.hh  PolySet.cc  (+36 more)
tests/: Makefile.am  common_preamble.am  pplite_test.hh
tests/Con/: Makefile.am  con1.cc  print1.cc
tests/F_Poly/: Makefile.am  conhull.cc  gens_info.cc  get_poly.cc  lub.cc
tests/Index_Set/: Makefile.am  indexset1.cc
tests/Integer/: Makefile.am  addition.cc  assignment.cc  comparison.cc  constructor.cc  division.cc  gcd.cc  lcm.cc  multiplication.cc  stream.cc  subtraction.cc
tests/Linear_Expr/: Makefile.am  linexpr1.cc  linexpr2.cc  linexpr3.cc  removesd1.cc
tests/PSet/: Makefile.am  addcons1.cc  affinedim1.cc  affineimage1.cc  affinepreimage1.cc  bounded1.cc  bounds1.cc  closed1.cc  closure1.cc  collapse1.cc  concatenate1.cc  contains1.cc  difference1.cc  disjoint1.cc  disjunct1.cc  empty1.cc  entails1.cc  equals1.cc  foldspacedims.cc  fromcons1.cc  frompoly1.cc  fromspacedim1.cc  intersection1.cc  join1.cc  maxmin1.cc  meet1.cc  reduce1.cc  size1.cc  spacedims1.cc  split.cc  universe1.cc  widen.cc
tests/Poly/: Makefile.am  addcons1.cc  addcons2.cc  addcons3.cc  addgens1.cc  addgens2.cc  addspacedims.cc  affinedim1.cc  affineimage.cc  affinepreimage.cc  assign_ops.cc  bbox1.cc  bbox2.cc  bounded.cc  boxed_inters.cc  closed_join_if_exact.cc  concatenate.cc  conhull.cc  constrains.cc  disjoint.cc  dualhyper.cc  efc.cc  empty1.cc  equals.cc  expandspacedim.cc  foldspacedims.cc  gentocon.cc  hash.cc  hyper.cc  hyperphull.cc  inters.cc  join_if_exact_closed.cc  join_if_exact_nnc.cc  mapspacedims.cc  mater.cc  minmax.cc  parallelimage.cc  polydiff.cc  polyhull.cc  randphull.cc  (+24 more)
tests/Poly_Impl/: Makefile.am  addcons1.cc  addgens2.cc  addns.cc  asciidump1.cc  assign_ops.cc  conhull.cc  gentocon.cc  memory1.cc  minimize.cc  split.cc  widen_cert.cc
tests/Var/: Makefile.am  var1.cc
