# PPLite: a lightweight library for convex polyhedra derived from PPL.
# Copyright (C) 2001-2010 Roberto Bagnara <bagnara@cs.unipr.it>
# Copyright (C) 2010-2018 BUGSENG srl (http://bugseng.com)
# Copyright (C) 2018-2023 Enea Zaffanella <enea.zaffanella@unipr.it>
#
# This file is part of PPLite.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/tests/common_preamble.am

XFAIL_TESTS =

# List tests here.

TESTS = \
addcons1 \
affinedim1 \
affineimage1 \
affinepreimage1 \
bounded1 \
bounds1 \
closed1 \
closure1 \
collapse1 \
concatenate1 \
contains1 \
disjoint1 \
disjunct1 \
empty1 \
entails1 \
equals1 \
intersection1 \
foldspacedims \
fromcons1 \
frompoly1 \
fromspacedim1 \
join1 \
maxmin1 \
meet1 \
reduce1 \
size1 \
spacedims1 \
split \
universe1 \
widen

# TESTS = \
# difference1 \
# relwith1 \
# List tests' sources here.

addcons1_SOURCES = addcons1.cc
affinedim1_SOURCES = affinedim1.cc
affineimage1_SOURCES = affineimage1.cc
affinepreimage1_SOURCES = affinepreimage1.cc
bounded1_SOURCES = bounded1.cc
bounds1_SOURCES = bounds1.cc
closed1_SOURCES = closed1.cc
closure1_SOURCES = closure1.cc
collapse1_SOURCES = collapse1.cc
concatenate1_SOURCES = concatenate1.cc
contains1_SOURCES = contains1.cc
disjoint1_SOURCES = disjoint1.cc
disjunct1_SOURCES = disjunct1.cc
empty1_SOURCES = empty1.cc
entails1_SOURCES = entails1.cc
equals1_SOURCES = equals1.cc
intersection1_SOURCES = intersection1.cc
foldspacedims_SOURCES = foldspacedims.cc
fromcons1_SOURCES = fromcons1.cc
frompoly1_SOURCES = frompoly1.cc
fromspacedim1_SOURCES = fromspacedim1.cc
join1_SOURCES = join1.cc
maxmin1_SOURCES = maxmin1.cc
meet1_SOURCES = meet1.cc
reduce1_SOURCES = reduce1.cc
size1_SOURCES = size1.cc
spacedims1_SOURCES = spacedims1.cc
split_SOURCES = split.cc
universe1_SOURCES = universe1.cc
widen_SOURCES = widen.cc
# difference1_SOURCES = difference1.cc
# relwith1_SOURCES = relwith1.cc
