# PPLite: a lightweight library for convex polyhedra derived from PPL.
# Copyright (C) 2018-2023 Enea Zaffanella <enea.zaffanella@unipr.it>
#
# This file is part of PPLite.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/tests/common_preamble.am

# List tests here.

TESTS = \
addcons1 \
addgens2 \
addns \
asciidump1 \
assign_ops \
conhull \
gentocon \
memory1 \
minimize \
split \
widen_cert

# List tests' sources here.

addcons1_SOURCES = addcons1.cc
addgens2_SOURCES = addgens2.cc
addns_SOURCES = addns.cc
asciidump1_SOURCES = asciidump1.cc
assign_ops_SOURCES = assign_ops.cc
conhull_SOURCES = conhull.cc
gentocon_SOURCES = gentocon.cc
memory1_SOURCES = memory1.cc
minimize_SOURCES = minimize.cc
split_SOURCES = split.cc
widen_cert_SOURCES = widen_cert.cc
